--- a/index.html
+++ b/index.html
@@ -1,55 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Parrot Card Game</title>
+    <link rel="icon" type="image/png" href="images/front.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style/reset.css">
     <link rel="stylesheet" href="./style/style.css">
-    <title>Parrot</title>
 </head>
 <body>
+    <header>
+        <h1>PARROT CARD GAME</h1>
+    </header>
     <main>
-        <header>
-            <h1 class="header-h1">PARROT CARD GAME</h1>
-        </header>
-        <main class="container-center">
-            <section class="cards">
-
-            <div class="card-parrot">
-                <img src="./assets/front.png" alt="">
-            </div>
-            <div class="card-parrot">
-                <img src="./assets/front.png" alt="">
-            </div><div class="card-parrot">
-                <img src="./assets/front.png" alt="">
-            </div>
-            <div class="card-parrot">
-                <img src="./assets/front.png" alt="">
-            </div>
-            <div class="card-parrot">
-                <img src="./assets/front.png" alt="">
-            </div><div class="card-parrot">
-                <img src="./assets/front.png" alt="">
-            </div>
-            <div class="card-parrot">
-                <img src="./assets/front.png" alt="">
-            </div>
-            <div class="card-parrot">
-                <img src="./assets/front.png" alt="">
-            </div><div class="card-parrot">
-                <img src="./assets/front.png" alt="">
-            </div>
-            <div class="card-parrot">
-                <img src="./assets/front.png" alt="">
-            </div>
-            <div class="card-parrot">
-                <img src="./assets/front.png" alt="">
-            </div><div class="card-parrot">
-                <img src="./assets/front.png" alt="">
-            </div>
-            </section>
-        </main>
     </main>
+    
+    <script src="./script.js"></script>
 </body>
 </html>
